--- a/src/components/MainPage/main.css
+++ b/src/components/MainPage/main.css
@@ -4,6 +4,11 @@
   height: 100vh;
 }
 
+/* =====================
+==========================
+===========REG FORM ==================
+================================================= */
+
 .mainRight {
   display: grid;
   grid-row-gap: 30px;
@@ -60,3 +65,13 @@
   display: grid;
   grid-row-gap: 10px;
 }
+
+/* ===============  REG form is done ======================================================= */
+
+/* 
+ */
+/* 
+  
+ */
+
+/* ==============   START LOGIN FORM =========================== */
