--- a/src/components/TestPage/test.css
+++ b/src/components/TestPage/test.css
@@ -22,6 +22,7 @@
 }
 
 .steps-action button {
+  margin-top: 40px;
   width: 470px;
 }
 
@@ -45,6 +46,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 .buttons button:focus {
   background-color: #1890ff;
@@ -95,7 +97,7 @@
   margin: 0 auto;
 }
 
-.ant-progress-text {
+.timer .ant-progress-text {
   display: none;
 }
 .clock {
@@ -110,4 +112,40 @@
   width: 50px;
   height: 70px;
   margin: 0 auto;
+}
+
+.gatb1,
+.gatb2 {
+  border: 1px solid #bfbfbf;
+}
+
+/* =============================== */
+.appear {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 150px;
+  animation: fade 3s;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 1;
+    transform: rotate(0deg);
+  }
+  30% {
+    opacity: 0.7;
+    transform: rotate(20deg);
+  }
+  60% {
+    opacity: 0.4;
+    transform: rotate(-20deg);
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(0deg);
+  }
 }
